cambios en estilo css

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
             backdrop-filter: blur(10px);
         }
         .login-header {
-            background: linear-gradient(70deg, #732982, #e40303, #ff8c00, #ffed00, #008018, #004cff);
+            background: linear-gradient(70deg, #1e3c72, #2a5298, #3b82f6, #60a5fa, #93c5fd, #dbeafe);
             color: white;
             padding: 2rem;
             text-align: center;
@@ -38,7 +38,7 @@
             box-shadow: 0 0 0 0.2rem rgba(78, 205, 196, 0.25);
         }
         .btn-kukis {
-            background: linear-gradient(45deg, #ff6b6b, #4ecdc4);
+            background: linear-gradient(70deg, #1e3c72, #2a5298, #3b82f6, #60a5fa, #93c5fd, #dbeafe);
             border: none;
             border-radius: 25px;
             padding: 12px 30px;
